# floating_point_cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md
fas/: float.hpp  stream.hpp
tests/: CMakeLists.txt  addition.cpp  comparison.cpp  constants.cpp  constructor_double_conversion.cpp  constructors.cpp  conversion.cpp  decrement.cpp  division.cpp  equality.cpp  increment.cpp  multiplication.cpp  numeric_limits.cpp  substraction.cpp  test_utils.hpp  traits.cpp  unary_minus.cpp  unary_plus.cpp
